; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_driver.c_strftime_am_pm.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_driver.c_strftime_am_pm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i8*, %struct.tm*)* @strftime_am_pm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @strftime_am_pm(i8* %0, i64 %1, i8* %2, %struct.tm* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.tm*, align 8
  %9 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store %struct.tm* %3, %struct.tm** %8, align 8
  store i8* null, i8** %9, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load %struct.tm*, %struct.tm** %8, align 8
  %14 = call i32 @strftime(i8* %10, i64 %11, i8* %12, %struct.tm* %13)
  ret void
}

declare dso_local i32 @strftime(i8*, i64, i8*, %struct.tm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
